--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
       var colors = ["#B8D430", "#3AB745", "#029990", "#3501CB",
                  "#2E2C75", "#673A7E", "#CC0071", "#F80120",
                  "#F35B20", "#FB9A00", "#FFCC00", "#FEF200"];
-      var restaraunts = ["源記燒味", "泰樂廚", "T-T Party", "Five Guys",
-                       "Gold Star", "La Mexicana", "Chipotle", "Tazza Mia",
-                       "Panera", "Just Crepes", "Arby's", "Indian"];
+      var restaraunts = ["源記燒味", "泰樂廚", "金田長壽司", "五穀豐收",
+                       "座雲吞麵", "泰屋", "麵包新語", "Home Stay",
+                       "漢城美食"];
 
+      var numRestaurants = restaraunts.length;
       var startAngle = 0;
-      var arc = Math.PI / 6;
+      var arc = Math.PI * 2 / numRestaurants;
       var spinTimeout = null;
 
       var spinArcStart = 10;
@@ -44,7 +45,7 @@
 
           ctx.font = 'bold 12px sans-serif';
 
-          for(var i = 0; i < 12; i++) {
+          for(var i = 0; i < numRestaurants; i++) {
             var angle = startAngle + i * arc;
             ctx.fillStyle = colors[i];
 
