--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
+<!doctype html>
 <!-- saved from url=(0076)http://tpstatic.com/_sotc/sites/default/files/1010/source/roulettewheel.html -->
 <html>
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="utf-8">
+    <title>Roulette Wheel</title>
   </head>
   <body>
     <input type="button" value="spin" onclick="spin();" style="float: left;">
     <canvas id="wheelcanvas" width="500" height="500"></canvas>
-    <script type="application/javascript">
+    <script>
       var colors = ["#B8D430", "#3AB745", "#029990", "#3501CB",
                  "#2E2C75", "#673A7E", "#CC0071", "#F80120",
                  "#F35B20", "#FB9A00", "#FFCC00", "#FEF200"];
