Auto-colours and text styling

--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
     <input type="button" value="spin" onclick="spin();" style="float: left;">
     <canvas id="wheelcanvas" width="500" height="500"></canvas>
     <script>
-      var colors = ["#B8D430", "#3AB745", "#029990", "#3501CB",
-                 "#2E2C75", "#673A7E", "#CC0071", "#F80120",
-                 "#F35B20", "#FB9A00", "#FFCC00", "#FEF200"];
       var restaraunts = ["源記燒味", "泰樂廚", "金田長壽司", "五穀豐收",
                        "座雲吞麵", "泰屋", "麵包新語", "Home Stay",
                        "漢城美食"];
@@ -45,11 +42,11 @@
           ctx.strokeStyle = "black";
           ctx.lineWidth = 2;
 
-          ctx.font = 'bold 12px sans-serif';
+          ctx.font = 'bold 16px sans-serif';
 
           for(var i = 0; i < numRestaurants; i++) {
             var angle = startAngle + i * arc;
-            ctx.fillStyle = colors[i];
+            ctx.fillStyle = "hsl(" + rtod(angle) + ", 80%, 50%)";
 
             ctx.beginPath();
             ctx.arc(250, 250, outsideRadius, angle, angle + arc, false);
@@ -58,10 +55,10 @@
             ctx.fill();
 
             ctx.save();
-            ctx.shadowOffsetX = -1;
-            ctx.shadowOffsetY = -1;
-            ctx.shadowBlur    = 0;
-            ctx.shadowColor   = "rgb(220,220,220)";
+            ctx.shadowOffsetX = 1;
+            ctx.shadowOffsetY = 1;
+            ctx.shadowBlur    = 2;
+            ctx.shadowColor   = "rgb(255,255,255)";
             ctx.fillStyle = "black";
             ctx.translate(250 + Math.cos(angle + arc / 2) * textRadius, 250 + Math.sin(angle + arc / 2) * textRadius);
             ctx.rotate(angle + arc / 2 + Math.PI / 2);
@@ -111,6 +108,9 @@
         var index = Math.floor((360 - degrees % 360) / arcd);
         ctx.save();
         ctx.font = 'bold 30px sans-serif';
+        ctx.shadowOffsetX = -1;
+        ctx.shadowOffsetY = -1;
+        ctx.shadowColor   = "rgb(220,220,220)";
         var text = restaraunts[index]
         ctx.fillText(text, 250 - ctx.measureText(text).width / 2, 250 + 10);
         ctx.restore();
@@ -120,6 +120,10 @@
         var ts = (t/=d)*t;
         var tc = ts*t;
         return b+c*(tc + -3*ts + 3*t);
+      }
+
+      function rtod(radians){
+        return radians * 180 / Math.PI;
       }
 
       draw();
