--- a/index.html
+++ b/index.html
@@ -4,10 +4,25 @@
   <head>
     <meta charset="utf-8">
     <title>Roulette Wheel</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+      }
+      html,
+      body {
+        height: 100%;
+      }
+      canvas {
+        height: 100%;
+        position: absolute;
+        width: 100%;
+      }
+    </style>
   </head>
   <body>
-    <input type="button" value="spin" onclick="spin();" style="float: left;">
-    <canvas id="wheelcanvas" width="500" height="500"></canvas>
+    <canvas id="wheelcanvas"></canvas>
     <script>
       var restaraunts = ["源記燒味", "泰樂廚", "金田長壽司", "五穀豐收",
                        "座雲吞麵", "泰屋", "麵包新語", "Home Stay",
@@ -24,6 +39,48 @@
 
       var ctx;
 
+      var canvas,
+          canvasWidth,
+          canvasHeight,
+          relevantSize,
+          cX,
+          cY;
+
+      init();
+
+      function init(){
+        canvas = document.getElementById("wheelcanvas");
+
+        calculateSize();
+
+        addEvents();
+      }
+
+      function calculateSize(){
+
+        var devicePixelRatio = window.devicePixelRatio || 1;
+
+        canvasWidth = canvas.clientWidth * devicePixelRatio;
+        canvasHeight = canvas.clientHeight * devicePixelRatio;
+
+        canvas.width = canvasWidth;
+        canvas.height = canvasHeight;
+
+        cX = canvasWidth / 2;
+        cY = canvasHeight / 2;
+
+        relevantSize = Math.min(canvasWidth, canvasHeight);
+
+        draw();
+      }
+
+      function addEvents(){
+
+        canvas.addEventListener("click", spin);
+
+        window.addEventListener("resize", calculateSize);
+      }
+
       function draw() {
         drawRouletteWheel();
       }
@@ -31,38 +88,37 @@
       function drawRouletteWheel() {
         var canvas = document.getElementById("wheelcanvas");
         if (canvas.getContext) {
-          var outsideRadius = 200;
-          var textRadius = 160;
-          var insideRadius = 0;
+          var outsideRadius = 0.4 * relevantSize;
+          var textRadius = 0.32 * relevantSize;
+          var insideRadius = 0 * relevantSize;
 
           ctx = canvas.getContext("2d");
-          ctx.clearRect(0,0,500,500);
+          ctx.clearRect(0,0,canvasWidth,canvasHeight);
 
 
           ctx.strokeStyle = "black";
           ctx.lineWidth = 2;
 
-          ctx.font = 'bold 16px sans-serif';
+          ctx.font = 'bold 20px sans-serif';
 
           for(var i = 0; i < numRestaurants; i++) {
             var angle = startAngle + i * arc;
-            ctx.fillStyle = "hsl(" + rtod(angle) + ", 80%, 50%)";
+            ctx.fillStyle = "hsl(" + rtod(i * arc) + ", 80%, 50%)";
 
             ctx.beginPath();
-            ctx.arc(250, 250, outsideRadius, angle, angle + arc, false);
-            ctx.arc(250, 250, insideRadius, angle + arc, angle, true);
+            ctx.arc(cX, cY, outsideRadius, angle, angle + arc, false);
+            ctx.arc(cX, cY, insideRadius, angle + arc, angle, true);
             ctx.stroke();
             ctx.fill();
 
             ctx.save();
-            ctx.shadowOffsetX = 1;
-            ctx.shadowOffsetY = 1;
-            ctx.shadowBlur    = 2;
-            ctx.shadowColor   = "rgb(255,255,255)";
+            ctx.lineWidth = 1;
+            ctx.strokeStyle = "white";
             ctx.fillStyle = "black";
-            ctx.translate(250 + Math.cos(angle + arc / 2) * textRadius, 250 + Math.sin(angle + arc / 2) * textRadius);
+            ctx.translate(cX + Math.cos(angle + arc / 2) * textRadius, cY + Math.sin(angle + arc / 2) * textRadius);
             ctx.rotate(angle + arc / 2 + Math.PI / 2);
             var text = restaraunts[i];
+            ctx.strokeText(text, -ctx.measureText(text).width / 2, 0);
             ctx.fillText(text, -ctx.measureText(text).width / 2, 0);
             ctx.restore();
           }
@@ -70,14 +126,14 @@
           //Arrow
           ctx.fillStyle = "black";
           ctx.beginPath();
-          ctx.moveTo(250 - 4, 250 - (outsideRadius + 5));
-          ctx.lineTo(250 + 4, 250 - (outsideRadius + 5));
-          ctx.lineTo(250 + 4, 250 - (outsideRadius - 5));
-          ctx.lineTo(250 + 9, 250 - (outsideRadius - 5));
-          ctx.lineTo(250 + 0, 250 - (outsideRadius - 13));
-          ctx.lineTo(250 - 9, 250 - (outsideRadius - 5));
-          ctx.lineTo(250 - 4, 250 - (outsideRadius - 5));
-          ctx.lineTo(250 - 4, 250 - (outsideRadius + 5));
+          ctx.moveTo(cX - 4, cY - (outsideRadius + 5));
+          ctx.lineTo(cX + 4, cY - (outsideRadius + 5));
+          ctx.lineTo(cX + 4, cY - (outsideRadius - 5));
+          ctx.lineTo(cX + 9, cY - (outsideRadius - 5));
+          ctx.lineTo(cX + 0, cY - (outsideRadius - 13));
+          ctx.lineTo(cX - 9, cY - (outsideRadius - 5));
+          ctx.lineTo(cX - 4, cY - (outsideRadius - 5));
+          ctx.lineTo(cX - 4, cY - (outsideRadius + 5));
           ctx.fill();
         }
       }
@@ -110,9 +166,12 @@
         ctx.font = 'bold 30px sans-serif';
         ctx.shadowOffsetX = -1;
         ctx.shadowOffsetY = -1;
-        ctx.shadowColor   = "rgb(220,220,220)";
+        //ctx.shadowColor   = "rgb(220,220,220)";
+        ctx.strokeStyle = "white";
+        ctx.lineWidth = 2;
         var text = restaraunts[index]
-        ctx.fillText(text, 250 - ctx.measureText(text).width / 2, 250 + 10);
+        ctx.strokeText(text, cX - ctx.measureText(text).width / 2, cY + 10);
+        ctx.fillText(text, cX - ctx.measureText(text).width / 2, cY + 10);
         ctx.restore();
       }
 
@@ -125,8 +184,6 @@
       function rtod(radians){
         return radians * 180 / Math.PI;
       }
-
-      draw();
     </script>
   </body>
 </html>
