--- a/index.html
+++ b/index.html
@@ -169,7 +169,9 @@
 
       function test(){
         var i = 0,
-            count = 100;
+            count = 100,
+            start = Date.now(),
+            duration;
 
         setCompleteCallback(function(result){
           i++;
@@ -183,7 +185,8 @@
             spin();
           }
           else {
-            console.log(results);
+            duration = (Date.now() - start) / 1000;
+            console.log(duration + " sec", results);
           }
         });
 
@@ -385,25 +388,26 @@
           ctx.arc(cX, cY, innerWoodRadius, 0, Math.PI * 2);
           ctx.fill();
 
-          drawCentreOrnament(ctx, angle, ornamentRadius);
+          drawCentreOrnament(ctx, startAngle, ornamentRadius);
 
 
           //Ball
-          var spinFrac = spinTime/spinTimeTotal,
-              ballAmplitude = 10,
-              ballShakeCount = 20,
-              //ballDecay = spinFrac,
+          var spinFrac = (spinTime/spinTimeTotal || 0),
+              ballAmplitude = 20,
+              ballShakeCount = 30,
+              ballSpeed = 2,
+              //ballDecay = 1 - spinFrac,
               ballDecay = Math.pow(spinFrac-1, 2),
-              ballWobble = ballAmplitude * (1 - spinFrac)
-                * Math.sin(ballDecay * Math.PI * ballShakeCount),
-              ballY = cY - insideRadius + (ballWobble || 0),
+              ballWobble = ballAmplitude * ballDecay * Math.sin(ballDecay * Math.PI * ballShakeCount),
+              ballY = cY + Math.sin(-startAngle * ballSpeed) * (insideRadius + ballWobble),
+              ballX = cX + Math.cos(-startAngle * ballSpeed) * (insideRadius + ballWobble),
               // Ball gradient
               ballGradient = ctx.createLinearGradient(0,ballY - 5,0,ballY + 5);
           ballGradient.addColorStop(0, 'rgb(255,255,255)');
           ballGradient.addColorStop(1, 'rgb(165,165,165)');
           ctx.fillStyle = ballGradient;
           ctx.beginPath();
-          ctx.arc(cX, ballY, 5, 0, Math.PI * 2);
+          ctx.arc(ballX, ballY, 5, 0, Math.PI * 2);
           ctx.fill();
           ctx.stroke();
         }
@@ -492,7 +496,7 @@
         spinAngleStart = Math.random() * 10 + 10;
         spinStart = 0;
         spinTime = 0;
-        spinTimeTotal = Math.random() * 10 + 8 * 1000;
+        spinTimeTotal = Math.random() * 5 + 5 * 1000;
         audio = document.getElementById("ball-sound");
         if(audio.duration){
           audio.currentTime = audio.duration - spinTimeTotal / 1000;
@@ -517,7 +521,10 @@
       }
 
       function stopRotateWheel() {
-        var degrees = rtod(startAngle) + 90;
+        var ballAngle = startAngle * 2,
+            wheelAngle = -startAngle,
+            relativeAngle = ballAngle - wheelAngle,
+            degrees = rtod(relativeAngle);
         var arcd = rtod(arc);
         var index = Math.floor((360 - degrees % 360) / arcd);
         ctx.save();
